Fix for centered vertical alignment of grid editors with mixed-height row content
git-svn-id: http://code.extjs.com/svn/ext/trunk@2516 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/grid.css
+++ b/resources/css/grid.css
@@ -54,6 +54,10 @@
     white-space: nowrap;
 }
 
+.x-grid3 td.x-grid3-cell {
+    vertical-align: middle;
+}
+
 .x-grid3-hd-inner {
     position:relative;
 	 cursor:inherit;
